--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,4 +85,29 @@ html , body{
      font-family: var(--medium-font) !important;
  }
 
+ app-exp-xe-card{
+   
+    h5{
+       
+        transition: 2s ease-in-out;
+        opacity: 0;
+    }
+    h6{
+        transform: translateX(250%) scale(1.5);
+        transition: 2s ease-in-out;
+        opacity: 0;
+    }
+ }
+ app-exp-xe-card.animate{
+    h5{
+        
+        opacity: 1;
+    }
+    h6{
+
+        transform: translateX(0) scale(1);
+        opacity: 1;
+    }
+ }
+
 
