--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,10 +79,13 @@
                 <span class="img"><img src="/assets/check-mark.png" alt=""></span>
             
             </button>
+            <img class="dots" src="/assets/dots-green.svg" alt="">
         </div>
         <div class="xe-card card2">
-            <div class="bordered"></div>
-            <img src="/assets/real bonface.png" alt="">            
+            <div class="bordered">
+              
+            </div>
+            <img class="me" src="/assets/real bonface.png" alt="">            
         </div>
     </div>
     <div class="section1 sect" id="services">
@@ -263,6 +266,8 @@
             </div>
         </div>
     </div>
+
+    <img src="/assets/dots-light.svg" alt="" class="dot second">
 
 
 
