--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,7 +51,7 @@ html , body{
     --light-font: 'PlusJakartaSansLight';
 
     
-    --margin-color: #d7d8d9;
+    --margin-color: #edf7ec;
     --sec-color: rgba #ecf4fc;
     --lower-left-color: #f0feeb;
     --button-pr: #8dcc6d;
