--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@
     position: relative;
 
     padding-top: 70px;
-    padding-bottom: 100px;
+    padding-bottom: 70px;
 
     .overlay{
         position: fixed;
@@ -170,13 +170,17 @@
             flex-direction: column;
 
             .my-phone-menu{
+                position: relative;
                 height: 100%;
                
                 padding: 15px;
+                overflow: hidden;
 
                 .xe-button{
                    margin-top: 70px;
                 }
+
+                
             }
 
             .menu-links{
@@ -200,17 +204,13 @@
                     width: 120px;
                     align-items: center;
                     justify-content: center;
-                    animation: aHover 1s  delay iteration-count direction fill-mode;
+                    transition: 2s ease-in-out;
+                    
                 }
-                a:hover{
-                    border-bottom: 2px solid var(--secondary-color);
-                    animation: aHover;
-                    animation-delay: 500ms;
+                a:hover{                
+                    border-color: var(--secondary-color);
                 }
-                @keyframes aHover {
-                    from{border-bottom: 2px solid white;}
-                    to{border-bottom: 2px solid var(--secondary-color);}
-                }
+                
             }
         }
         
@@ -334,6 +334,7 @@
         
     }
     .card1{
+        position: relative;
         
         width: calc(100% - 32px);
       /*  width: 100%; */
@@ -343,6 +344,14 @@
         p{
             max-width: 80%;
         } */
+
+        img.dots{
+            position: absolute;
+            z-index: 500000;
+            width: 120px;
+            bottom: 10px;
+            right: 10px;
+        }
 
         
     }
@@ -379,6 +388,15 @@
             transform: translateX(-50%);
             top: 2px;
             z-index: 100;
+            transition: 2s ease-in-out;
+        }
+
+        &:hover{
+            img.me{
+                transform: scale(1.1);
+                left: 20%;
+                
+            }
         }
     }
 
@@ -456,12 +474,23 @@
         gap: 20px !important;
         align-items: center;
         justify-content: center;
+
+        app-xe-skill-cards {
+            transition: 1s ease-in-out;
+                cursor: pointer;
+        }
+        
+        app-xe-skill-cards:hover {
+            transform: scale(.8) !important;
+        }
     }
 
     .experience-card{
         display: grid;
         grid-template-columns: repeat(auto-fill , minmax(100% , 1fr));
         gap: 20px;
+
+        
 
     }
 
@@ -600,6 +629,16 @@ app-xe-card{
         }
     }
 }
+.dot.second{
+    position: absolute;
+    bottom: 30px;
+    z-index: 10000;
+    width: 120px;
+    img{
+        width: 100% !important;        
+    }
+
+}
 
 
 @media screen and (min-width : 1001px) {
@@ -698,6 +737,9 @@ app-xe-card{
 
     .sect {
         width: 70% !important;
+    }
+    .dots{
+        width: 200px !important;
     }
 
     
