--- a/src/app/xe-skill-cards/xe-skill-cards.component.scss
+++ b/src/app/xe-skill-cards/xe-skill-cards.component.scss
@@ -25,7 +25,8 @@
     .title{
         p{
             width: fit-content;
-            font-weight: 700;
+            font-size: .9rem;
+            font-weight: 500;
         }
     }
 
