--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@
     position: relative;
 
     padding-top: 70px;
-    padding-bottom: 70px;
+    padding-bottom: 20px;
 
     .overlay{
         position: fixed;
@@ -84,8 +84,8 @@
     .custom-menuBar{
         background-color: transparent;
         border: none;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -93,22 +93,23 @@
         
 
         span{
-            width: 25px;
-            height: 3px;
+            width: 20px;
+            height: 2px;
             background-color: black;
-            margin: 5px;
+            border-radius: 1px;
+            margin: 3px;
             transition: transform 0.5s ease;
         }
         span.middle{
-            width: 40px;
+            width: 30px;
             background-color: var(--secondary-color);
         }
     }
 
     
     .cross .top {
-        width: 30px;
-        transform: rotate(45deg) translateY(9px);
+        width: 20px;
+        transform: rotate(45deg) translateY(5.5px);
         
 
       
@@ -116,8 +117,8 @@
     
     
     .cross .bottom {
-        width: 30px;
-        transform: rotate(-45deg)  translateY(-9px);
+        width: 20px;
+        transform: rotate(-45deg)  translateY(-5.5px);
         
     }
 
@@ -153,6 +154,7 @@
         position: fixed;
         z-index: 10000;
         min-height: 60px;
+        max-height: 60px;
         top: 20px;
         left: 50%;
         transform: translateX(-50%);
@@ -177,7 +179,7 @@
                 overflow: hidden;
 
                 .xe-button{
-                   margin-top: 70px;
+                   margin-top: 50px;
                 }
 
                 
@@ -221,12 +223,12 @@
         }
 
         .logo{
-            font-size: 1.4rem;
-            font-weight: 900;
+            font-size: 1.2rem;
+            font-weight: 800;
             cursor: pointer;
             color: black;
            span{
-            font-size: 30px;
+            font-size: 20px;
             font-family: var(--extra-bold-font);
             color: var(--secondary-color);
            }
@@ -236,8 +238,8 @@
         }
 
         a{
-            font-size: 1.2rem;
-            font-weight: 600;
+            font-size: .7rem;
+            font-weight: 500;
             text-decoration: none;
             color: black;
             padding: 5px 10px;
@@ -246,12 +248,13 @@
     }
     .xe-button{
         display: flex !important;
-        height: 60px !important;
+        height: 40px !important;
         border: none;
-        border-radius: 20px !important;
+        border-radius: 10px !important;
         align-items: center;
         padding: 0;
         margin: 0;
+        vertical-align: middle;
         overflow: hidden;
         cursor: pointer;
         width: fit-content !important;
@@ -259,8 +262,8 @@
         background-color: var(--secondary-color);
         span{
             padding: 7px 15px !important;
-            font-size: 1rem;
-            font-weight: 700;
+            font-size: .7rem;
+            font-weight: 400;
             color: white;
             
         }
@@ -272,7 +275,7 @@
         }
 
         img{
-            height: 15px;;
+            height: .8rem;
             
         }
     }
@@ -284,8 +287,7 @@
         margin-left: auto;
         margin-right: auto;
         
-        
-        margin-top: 20px;
+        margin-top: 0;
         
     }
    
@@ -295,7 +297,7 @@
         border-radius: 30px;        
         box-shadow: var(--box-shadow);
         background: var(--gradient-background);
-        height: 420px;
+        height: 380px;
         padding: 48px 32px;
 
         
@@ -307,7 +309,7 @@
 
         h1{
             
-            font-size: 1.7rem !important;
+            font-size: 1.4rem !important;
            
             font-weight: 800;
           
@@ -325,7 +327,7 @@
             padding: 0;
             margin: 0;
             font-weight: 600;
-            font-size: 1.1rem;
+            font-size: .8rem;
             line-height: 130%;
 
         }
@@ -347,8 +349,8 @@
 
         img.dots{
             position: absolute;
-            z-index: 500000;
-            width: 120px;
+            z-index: 10;
+            width: 100px;
             bottom: 10px;
             right: 10px;
         }
@@ -358,7 +360,7 @@
     .card2{
         width: calc(80% - 32px);
         height: 250px;
-        width: 250px;
+        width: 200px;
         margin-left: 20px;
         position: relative;
         overflow: hidden;
@@ -374,7 +376,7 @@
             top: 50%;
             transform: translate(-50%, -50%);
             border-radius: 30px;
-            border: 4px solid var(--secondary-color);
+            border: 2px solid var(--secondary-color);
 
            
             
@@ -384,20 +386,18 @@
          
         img{
             position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            top: 2px;
+            
+            top: 10px;
             z-index: 100;
+            object-fit: contain;
+            width: 95%;
+            height: 100%;
             transition: 2s ease-in-out;
+            transform: translateX(-50%);
+            left: 50%;
         }
 
-        &:hover{
-            img.me{
-                transform: scale(1.1);
-                left: 20%;
-                
-            }
-        }
+        
     }
 
     .sect{
@@ -416,7 +416,7 @@
             width: fit-content;
             font-weight: 800;
             margin-bottom: 10px;
-            font-size: 28px;
+            font-size: 1.4rem;
           
             letter-spacing: -0.1px;
             
@@ -424,7 +424,7 @@
 
         .heading h5{
             font-weight: 500;
-            font-size: 17px;
+            font-size: .7rem;
             
             margin-bottom: 20px;
         }
@@ -498,6 +498,7 @@
     .contact{
         h2{
             margin: 15px 15px;
+            font-size: 1.2rem;
         }
         h2 span{
             color: var(--secondary-color);
@@ -524,7 +525,7 @@
 
                 p{
                     font-family: 'Inter';
-                    font-size: 18px;
+                    font-size: .8rem;
                     font-weight: 600;
                     color: gray;
                 }
@@ -538,25 +539,26 @@
                 }
 
                 img{
-                    height: 30px;
+                    height: 20px;
                 }
             }
         }
     }
     .send-message{
+        width: 100%;
         .inputs{
             display: grid;
             grid-template-columns: 50% 50%;
            
 
             input{
-                height: 60px;
+                height: 40px;
                 margin: 5px;
                 width: calc(100% - 10px);
-                border-radius: 20px;
+                border-radius: 10px;
                 border: none;
                 outline: none;
-                font-size: 15px;
+                font-size: .6rem;
                 font-weight: 600;
                 padding: 0 10px;
                 box-shadow: var(--box-shadow);
@@ -569,7 +571,7 @@
 
         }
         button:disabled{
-            opacity: .6;
+            background-color: rgb(1, 87, 1);
            
         }
         .text-area{
@@ -580,7 +582,7 @@
                 width: calc(100% - 10px);
                 padding: 10px 10px;
                 border-radius: 20px;
-                font-size: 15px;
+                font-size: .7rem;
                 font-weight: 600;
                 border: none;
                 box-shadow: var(--box-shadow);
@@ -600,15 +602,15 @@ app-xe-card{
     display: flexbox;
     align-items: center;
     justify-content: center;
-    margin: 20px 0;
+    margin: 10px 0 5px 0;
     width: 100%;
     background-color: var(--secondary-color);
-    padding: 10px 0;
+    padding: 5px 0;
 
     .left{
         p {
                 text-align: center;
-                font-weight: 600;
+                font-size: 1rem;
                 padding: 5px 0;
 
             }
@@ -624,7 +626,7 @@ app-xe-card{
         .social-media{
             margin: 5px;
             img{
-                height: 20px;
+                height: 15px;
             }
         }
     }
@@ -632,8 +634,8 @@ app-xe-card{
 .dot.second{
     position: absolute;
     bottom: 30px;
-    z-index: 10000;
-    width: 120px;
+    z-index: 1000;
+    width: 100px;
     img{
         width: 100% !important;        
     }
@@ -656,8 +658,8 @@ app-xe-card{
         display: flex;
 
         .card2{
-            height: 420px;
-            width: 350px;
+            height: 380px;
+            width: 300px;
         }
         
     }
@@ -668,6 +670,7 @@ app-xe-card{
         width: 100%;
         display: flex;
         justify-content: space-between;
+        align-items: center;
 
 
         .logo{
@@ -725,6 +728,13 @@ app-xe-card{
     .sect {
         width: 80% !important;
     }
+   .accounts{
+    display: flex !important;
+    .send-message{
+        width: 50% !important;
+    }
+   }
+    
 
 
 }
