--- a/src/app/exp-xe-card/exp-xe-card.component.scss
+++ b/src/app/exp-xe-card/exp-xe-card.component.scss
@@ -29,7 +29,7 @@
 
     h3{
         font-weight: 700;
-        font-size: 36px;
+        font-size: 1.4rem;
         line-height: 50%;
         letter-spacing: -0.27px;
         color: var(--secondary-color) !important;
@@ -45,7 +45,7 @@
         margin: 15px 0;
         h5{
             font-weight: 600;
-            font-size: 21px;
+            font-size: 1rem;
             line-height: 100%;
             padding: 0;
             margin: 0;
@@ -56,7 +56,7 @@
         }
         h6{
             font-weight: 600;
-            font-size: 15px;
+            font-size: .8rem;
             line-height: 100%;
             color: #7A7F85 !important;
             padding: 0;
